--- a/product-details.html
+++ b/product-details.html
@@ -42,7 +42,7 @@
               <a class="nav-link " aria-current="page" href="index.html">Home<span></span></a>
             </li>
             <li class="nav-item me-4">
-              <a class="nav-link text-black active" href="shop.html">shop<span></span></a>
+              <a class="nav-link text-black" href="shop.html">shop<span></span></a>
             </li>
             <li class="nav-item me-4">
               <a class="nav-link text-black" href="blog.html">Blog<span></span></a>
